[gd_scene load_steps=6 format=3]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="1_x8d0h"]
[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Command_List_Forms/ModifyInventory_EventInputForm.gd" id="2_da3qg"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="3_l5hgx"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="4_tplko"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Deprecated.tscn" id="7_i6vjt"]

[node name="ModifyInventory_EventInputForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_x8d0h")
script = ExtResource("2_da3qg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -132.5
offset_right = 197.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Modify Player Inventory"
horizontal_alignment = 1

[node name="KeyDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_l5hgx")]
layout_mode = 2
selection_table_name = "Items"
label_text = "Select Item"
is_label_button = false

[node name="Label_Button" parent="Control/VBoxContainer/KeyDropdown/Label/HBox1" index="0"]
text = "Select Item"

[node name="Input" parent="Control/VBoxContainer/KeyDropdown" index="1"]
item_count = 1
selected = 0
popup/item_0/text = "Currency"
popup/item_0/id = 0

[node name="TrueorFalse" parent="Control/VBoxContainer" instance=ExtResource("4_tplko")]
layout_mode = 2
size_flags_vertical = 3
true_text = "+"
false_text = "-"
label_text = "Operation"
is_label_button = false

[node name="Input" parent="Control/VBoxContainer/TrueorFalse/Hbox1/Background" index="0"]
button_pressed = true
text = "+"

[node name="WholeNumber" parent="Control/VBoxContainer" instance=ExtResource("7_i6vjt")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Control/VBoxContainer/KeyDropdown"]
[editable path="Control/VBoxContainer/KeyDropdown/Label"]
[editable path="Control/VBoxContainer/TrueorFalse"]
